2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST:
	* maps:
	* xs_files: Add xs/ClutterShader.xs and its types.

	* xs/ClutterActor.xs: Bind Clutter::Actor shaders API.

	* xs/ClutterShader.xs: Bind Clutter::Shader, the OpenGL
	programmable pipeline abstraction.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterModel.xs: Bind:

	  clutter_model_set_sort()
	  clutter_model_set_filter()

	and start providing basic functionality for subclassing
	Clutter::Model with a pure-perl implementation.

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/script.pl: Fix the timeline to be used by the
	behaviours, and quit when the score terminates.

	* xs/ClutterModel.xs: Use the vector based API for appending
	and prepending rows to the model.

	* t/ClutterModel.t: Fix the Clutter::Model API test

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Require unstable GLib, for gperl_sv_defined()

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Add overloading for Clutter::Container::ForeachFunc
	invocation.

	* xs/ClutterContainer.xs: Finally wrap the FOREACH virtual
	function of the Clutter::Container interface.

	* xs/ClutterModel.xs:
	* xs/ClutterModelDefault.xs:
	* xs/ClutterModelIter.xs: Wrap more Clutter::Model and
	Clutter::Model::Iter API; still not completely working: requires
	API changes upstream for the append and prepend methods to
	work correctly.

	* t/ClutterModel.t: Add tests for Clutter::Model.

	* maps:
	* MANIFEST:
	* xs_files: Add new files

2007-12-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST:
	* maps:
	* xs_files:
	* xs/ClutterModel.xs: Initial bindings for Clutter::Model.

	* t/ClutterModel.t: Test suite for Clutter::Model API.

2007-12-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBehaviourEllipse.xs: Use the mPUSH?() macros to
	avoid the sv_2mortal(newSV?v()) tediousness.

	* t/ClutterBehaviourEllipse.t: Fix the alignment.
