@@ -1,5 +1,9 @@
 2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* xs/ClutterActor.xs: Allow overriding the PICK virtual function.
+
+2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* MANIFEST:
 	* maps:
 	* xs_files: Add xs/ClutterShader.xs and its types.
